# crypto-projects

./: .gitignore  .gitmodules  README.md  decrypt  encrypt
project1/: CMakeLists.txt  Cryptography-Project-1-Report (1).docx  Cryptography-Project-1-Report.docx  README.md  report.md
project1/include/: CodeBreaker.hpp  config.hpp.in  key_basic.hpp  setup.hpp
project1/lib/CppQuickCheck/: CMakeLists.txt
project1/resources/: analyze_results.rb  plaintext_dictionary.txt
project1/src/: CMakeLists.txt  CodeBreaker.cpp  main.cpp  parse_dictionaries.cpp  setup.cpp
project1/test/: CMakeLists.txt  CodeBreakerTest.cpp  Key.hpp  KeyTest.cpp  Scheduler.hpp  SchedulerTest.cpp  ciphertext_sample.cpp  experiments.cpp  rand_gen.hpp  testing.hpp
project1/test/examples/: CMakeLists.txt  analyze_dictionaries.cpp  choose_generator.cpp  gtest.cpp  quickcheck.cpp  quickcheck_generators.cpp  register_arbitrary.cpp  setup_test.cpp
project2/: CMakeList.txt  CMakeLists.txt  client.cpp  create-test-blogs.js  index.js  package.json  signup.html
project2/app/: genDigest.js  handle-requests.js  passport.js  routes.js
project2/models/: blog.js  key.js  timestamp.js  user.js
project2/posts/: attacks-our-blog-can-protect-against.md  cipher-suite-we-used.md  client  project1-solution-explain.md  project2-presentation.html  test1.html  test2.html  to-do-lists.html
project2/public/css/: blog-home.css  blog-post.css
project2/src/: CMakeLists.txt  client.cpp  crypto.cpp  crypto.hpp  dec.cpp  enc.cpp  gen_key.cpp  main-decrypt.cpp  main-encrypt.cpp  rsa-dec.cpp  rsa-enc.cpp
project2/src/examples/: CMakeLists.txt  gcm_enc_dec.cpp  rsa-test.cpp
project2/views/: default.ejs
project2/views/pages/: about.ejs  index.ejs  login.ejs  post.ejs  profile.ejs  signup.ejs
project2/views/partials/: alert.ejs  blogs.ejs  footer.ejs  head.ejs  header.ejs
